--- a/regradetresporcentagem.html
+++ b/regradetresporcentagem.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programa que verifica a porcentagem de um determinado valor</title>
+    <script type="text/javascript" src="regradetresporcentagem.js"></script>
 </head>
 <body>
     <h1>Calcula a porcentagem de um valor em JavaScript</h1>
@@ -16,19 +17,5 @@
     <input type="button" value="Verificar porcentagem do valor" onclick="calcularPorcentagem()">
     <div id="res">
     </div>
- 
-    <script>
-        function calcularPorcentagem() {
-            var txttotal = window.document.getElementById('txtvaltotal')
-            var valtotal =Number(txttotal.value)
-            var txtporcentagem = window.document.getElementById('txtvalporcentagem')
-            var porcentagem =Number(txtporcentagem.value)
-            var res = window.document.getElementById('res')
-            
-            var valfinal = ((valtotal * porcentagem)/100)
-
-            res.innerHTML = `<p>${porcentagem} por cento de ${valtotal} reais é igual à ${valfinal} reais.</p>`
-        }
-    </script>
 </body>
 </html>
